--- a/style.css
+++ b/style.css
@@ -1,16 +1,70 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-    margin: 0;
+  font-family: "Poppins", sans-serif;
+  background-color: #f6f6f6;
+  color: #444;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+}
+
+h1 {
+  color: rgb(179, 131, 226);
+  font-size: 11rem;
+  text-align: center;
+  opacity: 0.5;
+}
+
+form {
+  box-shadow: 2px 5px 8px rgba(8, 7, 7, 0.75);
+  max-width: 100%;
+  width: 400px;
+}
+
+.input {
+  border: none;
+  font-size: 2rem;
+  color: #444;
+  padding: 1rem 2rem;
+  display: block;
+  width: 100%;
+}
+
+.input::placeholder {
+  color: #d7d7d7;
+}
+
+.input:focus {
+  outline-color: rgb(179, 131, 226);
+}
+
+.todos {
+  background-color: #fff;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.todos li {
+  border-top: 1px solid #e5e5e5;
+  cursor: pointer;
+  font-size: 1.5rem;
+  padding: 1rem 2rem;
+}
+.todos li.completed {
+  color: #b6b6b6;
+  text-decoration: line-through;
+}
+small {
+  color: #b5b5b5;
+  margin-top: 2rem;
+  text-align: center;
 }
